# harpocrates

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  DEVELOPMENT.md  README.md  SECURITY.md  VAULT_APP_PROJECT.md  VAULT_APP_TASKS.md  package-lock.json  package.json  renovate.json  vite.config.js  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  release.yml  tag.yml
docs/: frontend-testing-plan.md  workflow.md
scripts/: set-version.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  commands.rs  config.rs  credentials.rs  crypto.rs  db.rs  error.rs  integration_tests.rs  lib.rs  main.rs  profiles.rs  queue.rs  s3.rs  throttle.rs
src/lib/components/: BackupDirectoryModal.svelte  ConfirmModal.svelte  FileTable.svelte  ProfileForm.svelte  ProfileForm.test.ts  RestoreModal.svelte  StatusFooter.svelte  ToastContainer.svelte  VerifyIntegrityModal.svelte
src/lib/stores/: operations.svelte.test.ts  operations.svelte.ts  profile.svelte.test.ts  profile.svelte.ts  selection.svelte.test.ts  selection.svelte.ts  toast.svelte.test.ts  toast.svelte.ts
src/mocks/: app-navigation.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/cleanup/: +page.svelte  page.test.ts
src/routes/files/: +page.svelte  page.test.ts
src/routes/scramble/: +page.svelte  page.test.ts
src/routes/settings/: +page.svelte  page.test.ts
src/routes/setup/: +page.svelte  page.test.ts
src/routes/share/: +page.svelte  page.test.ts
src/test/: setup.ts
