[package]
name = "harpocrates"
version = "0.2.0"
description = "Encrypted S3 File Manager"
authors = ["tnorth"]
edition = "2021"

[lib]
name = "harpocrates_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
chacha20poly1305 = "0.11"
hmac = "0.13"
sha2 = "0.11"
keyring-core = "1"
aws-sdk-s3 = "1"
aws-config = "1"
uuid = { version = "1", features = ["v4"] }
md-5 = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time", "sync"] }
thiserror = "2"
rand = "0.10"
dirs = "6"
hex = "0.4"
regex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }

[dev-dependencies]
tempfile = "3"

